{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 227,
  "lineage": "f212ab53-6fa5-b500-4d9f-d0ba8ac1080a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:network-acl/acl-0b75be3c7cabe8b08",
            "default_network_acl_id": "acl-0b75be3c7cabe8b08",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b75be3c7cabe8b08",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "529351201608",
            "subnet_ids": [
              "subnet-00a3a3fc9f2577743",
              "subnet-00c533aaa04ed474c",
              "subnet-01063ddf59424b748",
              "subnet-015054c817681c107",
              "subnet-052894d3b2ddd9527",
              "subnet-0aa3eeceabdf51b72"
            ],
            "tags": {
              "Name": "terraform_vpc-default"
            },
            "tags_all": {
              "Name": "terraform_vpc-default"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-0736fa0ec1077df6f",
            "default_route_table_id": "rtb-0736fa0ec1077df6f",
            "id": "rtb-0736fa0ec1077df6f",
            "owner_id": "529351201608",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "terraform_vpc-default"
            },
            "tags_all": {
              "Name": "terraform_vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:security-group/sg-026099cb26546240d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-026099cb26546240d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "529351201608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_vpc-default"
            },
            "tags_all": {
              "Name": "terraform_vpc-default"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0421a7a08ad9aad06",
            "domain": "vpc",
            "id": "eipalloc-0421a7a08ad9aad06",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-134-197-7.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.197.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_vpc-eu-west-2a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010969cfa47382a4a",
            "domain": "vpc",
            "id": "eipalloc-010969cfa47382a4a",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-177-138-210.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.138.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_vpc-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_vpc-eu-west-2b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d892a0568f3cd1d6",
            "domain": "vpc",
            "id": "eipalloc-0d892a0568f3cd1d6",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-42-176-232.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.176.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_vpc-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_vpc-eu-west-2c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:internet-gateway/igw-0d893b9d216ba3d3d",
            "id": "igw-0d893b9d216ba3d3d",
            "owner_id": "529351201608",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0421a7a08ad9aad06",
            "association_id": "eipassoc-048715a188f38028c",
            "connectivity_type": "public",
            "id": "nat-022d789d85b00989a",
            "network_interface_id": "eni-01b75438ebb85a064",
            "private_ip": "172.31.0.132",
            "public_ip": "18.134.197.7",
            "subnet_id": "subnet-00c533aaa04ed474c",
            "tags": {
              "Name": "terraform_vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_vpc-eu-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010969cfa47382a4a",
            "association_id": "eipassoc-0dc351a2484c2bcc0",
            "connectivity_type": "public",
            "id": "nat-0321300fbf2cd362a",
            "network_interface_id": "eni-0041f31393f65d525",
            "private_ip": "172.31.2.48",
            "public_ip": "35.177.138.210",
            "subnet_id": "subnet-01063ddf59424b748",
            "tags": {
              "Name": "terraform_vpc-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_vpc-eu-west-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d892a0568f3cd1d6",
            "association_id": "eipassoc-09dd8f91778eb70a2",
            "connectivity_type": "public",
            "id": "nat-07990c74a14006423",
            "network_interface_id": "eni-0ab7996b6ddc328d7",
            "private_ip": "172.31.4.221",
            "public_ip": "13.42.176.232",
            "subnet_id": "subnet-0aa3eeceabdf51b72",
            "tags": {
              "Name": "terraform_vpc-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_vpc-eu-west-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a93c065e73b6f0631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-022d789d85b00989a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a93c065e73b6f063",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d9291c4b5e1705d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0321300fbf2cd362a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d9291c4b5e1705d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04657ea1af03844551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07990c74a14006423",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04657ea1af0384455",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d893b9d216ba3d3d",
            "id": "r-rtb-008538d63490f03c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008538d63490f03c9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-0a93c065e73b6f063",
            "id": "rtb-0a93c065e73b6f063",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_vpc-private-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-04d9291c4b5e1705d",
            "id": "rtb-04d9291c4b5e1705d",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_vpc-private-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-04657ea1af0384455",
            "id": "rtb-04657ea1af0384455",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_vpc-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_vpc-private-eu-west-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:route-table/rtb-008538d63490f03c9",
            "id": "rtb-008538d63490f03c9",
            "owner_id": "529351201608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_vpc-public"
            },
            "tags_all": {
              "Name": "terraform_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af7b18297f70351c",
            "route_table_id": "rtb-0a93c065e73b6f063",
            "subnet_id": "subnet-00a3a3fc9f2577743"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d5c793baffc72b3",
            "route_table_id": "rtb-04d9291c4b5e1705d",
            "subnet_id": "subnet-015054c817681c107"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e75e959023b53e40",
            "route_table_id": "rtb-04657ea1af0384455",
            "subnet_id": "subnet-052894d3b2ddd9527"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c850be5933ad454e",
            "route_table_id": "rtb-008538d63490f03c9",
            "subnet_id": "subnet-00c533aaa04ed474c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf949278fe8996af",
            "route_table_id": "rtb-008538d63490f03c9",
            "subnet_id": "subnet-01063ddf59424b748"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d4b95684c39d5d3",
            "route_table_id": "rtb-008538d63490f03c9",
            "subnet_id": "subnet-0aa3eeceabdf51b72"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-00a3a3fc9f2577743",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a3a3fc9f2577743",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-015054c817681c107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015054c817681c107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-052894d3b2ddd9527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.31.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052894d3b2ddd9527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-00c533aaa04ed474c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c533aaa04ed474c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "terraform_vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-01063ddf59424b748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01063ddf59424b748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "terraform_vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:subnet/subnet-0aa3eeceabdf51b72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.31.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa3eeceabdf51b72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529351201608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "terraform_vpc-public-eu-west-2c"
            },
            "vpc_id": "vpc-046620b5d748652fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:529351201608:vpc/vpc-046620b5d748652fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0b75be3c7cabe8b08",
            "default_route_table_id": "rtb-0736fa0ec1077df6f",
            "default_security_group_id": "sg-026099cb26546240d",
            "dhcp_options_id": "dopt-0d1d66c6f198b4ca2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046620b5d748652fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0736fa0ec1077df6f",
            "owner_id": "529351201608",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}